#1844 - Fix ui cards > .ui.card to have correct margins, fix consecutive ui cards groups to preserve row spacing

--- a/src/definitions/views/card.less
+++ b/src/definitions/views/card.less
@@ -22,44 +22,6 @@
             Standard
 *******************************/
 
-
-/*--------------
-      Cards
----------------*/
-
-.ui.cards {
-  display: @groupDisplay;
-  margin: @groupCardsMargin;
-  flex-wrap: wrap;
-}
-
-.ui.cards > .card {
-  display: @groupCardDisplay;
-  margin: @groupCardMargin;
-  float: @groupFloat;
-}
-
-.ui.cards:first-child,
-.ui.card:first-child {
-  margin-top: 0em;
-}
-.ui.cards:last-child,
-.ui.card:last-child {
-  margin-bottom: 0em;
-}
-
-/* Clearing */
-.ui.cards:after,
-.ui.card:after {
-  display: block;
-  content: ' ';
-  height: 0px;
-  clear: both;
-  overflow: hidden;
-  visibility: hidden;
-}
-
-
 /*--------------
       Card
 ---------------*/
@@ -90,6 +52,47 @@
 .ui.card a {
   cursor: pointer;
 }
+
+.ui.card:first-child {
+  margin-top: 0em;
+}
+.ui.card:last-child {
+  margin-bottom: 0em;
+}
+
+/*--------------
+      Cards
+---------------*/
+
+.ui.cards {
+  display: @groupDisplay;
+  margin: @groupMargin;
+  flex-wrap: wrap;
+}
+
+.ui.cards > .card {
+  display: @groupCardDisplay;
+  margin: @groupCardMargin;
+  float: @groupCardFloat;
+}
+
+/* Clearing */
+.ui.cards:after,
+.ui.card:after {
+  display: block;
+  content: ' ';
+  height: 0px;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+
+
+/* Consecutive Card Groups Preserve Row Spacing */
+.ui.cards ~ .ui.cards {
+  margin-top: @consecutiveGroupDistance;
+}
+
 
 
 /*--------------
